# gitmotion

./: .env  .env.example  .gitignore  Dockerfile  README  README.md  docker-compose.yml
api/: .dockerignore  Cargo.toml
api/src/: main.rs
website/: .env.local.example  README.md  bun.lockb  package.json  tailwind.config.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/[id]/: page.tsx
website/src/app/api/count/: route.ts
website/src/app/api/gource/start/: route.ts
website/src/app/api/gource/status/[jobId]/: route.ts
website/src/app/api/gource/stop/: route.ts
website/src/app/api/gource/stop/[jobId]/: route.ts
website/src/app/api/gource/video/[jobId]/: route.ts
website/src/components/: background-noise.tsx  example-generations.tsx  footer.tsx  gource-input.tsx  gource-progress.tsx  gource-video.tsx  input.tsx  spotlight.tsx  visualizations-count.tsx
website/src/components/ui/: icons.tsx
website/src/lib/: redis.ts.ts
