[package]
name = "gitmotion-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
url = "2.4"
tempfile = "3.8"
chrono = "0.4"
uuid = { version = "1.3.0", features = ["v4"] }
actix-cors = "0.6.4"
tokio = { version = "1.28.2", features = ["full"] }
actix-files = "0.6"
mime = "0.3"
rust-crypto = "0.2.36"
hex = "0.4.3"